feat: add usecase tests for favourites
